# Algos_Labs

./: .gitmodules
lab10/: Makefile
lab10/data/: data_1000.txt  data_20.txt  data_5000.txt  data_50000.txt
lab10/src/: CMakeLists.txt
lab10/src/tasks/: CMakeLists.txt  task1.c
lab11/: Makefile
lab11/src/: CMakeLists.txt
lab11/src/tasks/: CMakeLists.txt  task1.c
lab2/: Makefile
lab2/src/libs/general_utils/: general_utils.c  general_utils.h
lab2/src/tasks/: task1.c
lab3/: Makefile
lab3/src/: CMakeLists.txt  main.c
lab3/src/libs/general_utils/: CMakeLists.txt  general_utils.c  general_utils.h
lab3/src/libs/task_manager/: CMakeLists.txt  task_manager.c  task_manager.h
lab3/src/tasks/: CMakeLists.txt  task1.c  tasks.h
lab4/: Makefile
lab4/src/: main.c
lab4/src/libs/general_utils/: general_utils.c
lab4/src/tasks/: task1.c
lab5/: Makefile
lab5/src/: CMakeLists.txt
lab5/src/tasks/: CMakeLists.txt  task1.c
lab6/: Makefile
lab6/src/: CMakeLists.txt
lab6/src/tasks/: CMakeLists.txt  task1.c
lab7/: Makefile
lab7/src/: CMakeLists.txt
lab7/src/tasks/: task1.c  tasks.h
lab8/: Makefile
lab8/src/: CMakeLists.txt
lab8/src/tasks/: CMakeLists.txt  task1.c
lab9/: Makefile
lab9/src/: CMakeLists.txt
lab9/src/tasks/: CMakeLists.txt  task1.c
